[package]
name = "mine_sweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy-inspector-egui = { version = "0.8", optional = true }
rand = "0.8"
serde = "1.0"
